Sat Jul 14 17:24:30 GMT+7 2012
atk: rebuilt
babl: rebuilt
cups: rebuilt
gdk-pixbuf: rebuilt
gegl: rebuilt
gimp: rebuilt
glib2: rebuilt
gobject-introspection: rebuilt
gst-plugins-base: rebuilt
gst-plugins-good: rebuilt
gstreamer: rebuilt
gtk: rebuilt
gtk3: rebuilt
pango: rebuilt
  Synced with -Current update per 14 July 2012

Sat Jul 14 07:37:55 GMT+7 2012
calibre: Upgraded to 0.8.60
gtk+3: rebuilt to fix host_mismatch on x86_64 machine

+--------------------------+
Fri Jul 13 14:09:52 GMT+7 2012
numpy: Upgraded to 1.6.2

+--------------------------+
Thu Jul 12 09:33:41 GMT+7 2012
avbin: Added
brainworkshop: Added
  This requires Python, avbin and OpenAL
OpenAL: Added

+--------------------------+
Tue Jul 10 19:07:42 GMT+7 2012
digiKam: Rebuilt against libpgf 6.12.24
libpgf: Upgraded to 6.12.24

+--------------------------+
Mon Jul  9 12:09:48 GMT+7 2012
digiKam: Upgraded to 2.7.0
OpenCV: Upgraded to 2.4.2

+--------------------------+
Sat Jul  7 06:59:17 GMT+7 2012
calibre: Upgraded
  Upgraded to 0.8.59

+--------------------------+
Tue Jul  3 08:13:48 GMT+7 2012
db48: Added
db53: Added
netatalk: Added
  This requires db4.6 or above. I provide two alternatives: db48 and db53

+--------------------------+
Mon Jul  2 15:55:20 GMT+7 2012
cnijfilter: Rebuilt
  Update the SlackBuild to produce correct directory layout for x86_64 machine
  Thanks to Ruario
+--------------------------+
Sun Jul  1 17:56:22 GMT+7 2012
libusbx: Rebuilt
  Remove libusb-compat from the package since it's included in -Current

+--------------------------+
Sun Jul  1 10:21:58 GMT+7 2012
calibre: Added
  This is a simplified SlackBuild script from Eric Hameleers
  All the dependencies are now installed as separate packages.
  This results big time saving in compilation process and space consumed
  You will need Python 2.7.x and pil (Available in -Current), icu4c, podofo,
  BeautifulSoup, dnspython, pysetuptools, python-cssutils, lxml, 