@@ -1,0 +1,9 @@
+Dropbox (store, sync and share files online)
+
+Dropbox is an extension that integrates the Dropbox web service
+with your desktop. It consists of two major components: dropboxd
+- a per-user closed-source daemon process that makes sure your
+$HOME/Dropbox directory is properly synchronized with the web
+Dropbox server/service, and dropbox-client, which connects to
+your dropboxd and presents a GUI based on the information
+dropboxd provides.
