@@ -1,0 +1,9 @@
+[Desktop Entry]
+Name=Dropbox
+GenericName=Network Storage
+Comment=Secure backup, sync and sharing made easy
+Exec=/opt/dropbox/dropboxd
+Icon=/usr/share/pixmaps/dropbox.png
+Terminal=false
+Type=Application
+Categories=Network;
