@@ -1,0 +1,19 @@
+# HOW TO EDIT THIS FILE:
+# The "handy ruler" below makes it easier to edit a package description.  Line
+# up the first '|' above the ':' following the base package name, and the '|'
+# on the right side marks the last column you can put a character in.  You must
+# make exactly 11 lines for the formatting to be correct.  It's also
+# customary to leave one space after the ':' except on otherwise blank lines.
+
+       |-----handy-ruler------------------------------------------------------|
+dropbox: dropbox (store, sync and share files online)
+dropbox:
+dropbox: Dropbox is an extension that integrates the Dropbox web service
+dropbox: with your desktop. It consists of two major components: dropboxd
+dropbox: - a per-user closed-source daemon process that makes sure your
+dropbox: $HOME/Dropbox directory is properly synchronized with the web
+dropbox: Dropbox server/service, and dropbox-client, which connects to
+dropbox: your dropboxd and presents a GUI based on the information
+dropbox: dropboxd provides.
+dropbox:
+dropbox:
